# tinyrand

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: master.yml  pull_request.yml
src/: counter.rs  duration.rs  lib.rs  mock.rs  tests.rs  xorshift.rs
src/duration/: tests.rs
src/mock/: tests.rs
tinyrand/: Cargo.toml
tinyrand-alloc/: Cargo.toml  README.md
tinyrand-alloc/src/: adv_mock.rs  lib.rs  mock.rs
tinyrand-alloc/src/adv_mock/: tests.rs
tinyrand-alloc/src/mock/: tests.rs
tinyrand-examples/: Cargo.toml
tinyrand-examples/examples/: basics.rs  mocking.rs  seeding.rs
tinyrand-examples/src/: lib.rs
tinyrand-std/: Cargo.toml  README.md
tinyrand-std/src/: adv_mock.rs  clock_seed.rs  lib.rs  thread_local.rs
tinyrand-std/src/clock_seed/: tests.rs
tinyrand-std/src/thread_local/: tests.rs
tinyrand-tools/: Cargo.toml
tinyrand-tools/src/: lib.rs
tinyrand/benches/: cri_rand.rs  iai_rand.rs
tinyrand/src/: counter.rs  duration.rs  lib.rs  mock.rs  mock_support.rs  rand128.rs  rand64.rs  splitmix.rs  test_mock.rs  tests.rs  wyrand.rs  xorshift.rs
tinyrand/src/counter/: tests.rs
tinyrand/src/duration/: tests.rs
tinyrand/src/mock/: tests.rs
tinyrand/src/splitmix/: tests.rs
tinyrand/src/test_mock/: tests.rs
tinyrand/src/wyrand/: tests.rs
tinyrand/src/xorshift/: tests.rs
tinyrand/tests/: bernoulli_bitmask.rs  bernoulli_coin_flip.rs  bernoulli_trial.rs  bernoulli_trials.rs  bit_flip.rs  coin_flip.rs  collision.rs  gaussian_mean_convergence.rs  mean_convergence.rs  monobit.rs  rand_stats.rs  stats_self_tests.rs  sum_convergence.rs
tinyrand/tests/stats/: mod.rs
