[package]
name = "tinyrand-examples"
version = "0.2.0"
edition = "2021"
readme = "../README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Examples for tinyrand"
repository = "https://github.com/obsidiandynamics/tinyrand"
keywords = ["rand", "rng"]

[dependencies]
tinyrand = { version = "0.2.0", path = "../tinyrand" }
tinyrand-alloc = { version = "0.2.0", path = "../tinyrand-alloc" }
tinyrand-std = { version = "0.2.0", path = "../tinyrand-std" }
