[package]
name = "tinyrand-std"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Extensions for using tinyrand with stdlib."
repository = "https://github.com/obsidiandynamics/tinyrand"
keywords = ["rand", "rng"]

[dependencies]
tinyrand = { version = "0.1.0", path = "../tinyrand" }
