[package]
name = "tinyrand-std"
version = "0.3.0"
edition = "2021"
readme = "README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Extensions for using tinyrand with std."
repository = "https://github.com/obsidiandynamics/tinyrand"
keywords = ["rand", "rng"]

[dependencies]
tinyrand = { version = "0.3.0", path = "../tinyrand" }
