[package]
name = "tinyrand-tools"
version = "0.5.0"
edition = "2021"
readme = "../README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Various tooling for tinyrand"
repository = "https://github.com/obsidiandynamics/tinyrand"
keywords = ["rand", "rng"]

[dependencies]
tinyrand = { version = "0.5.0", path = "../tinyrand" }
tinyrand-std = { version = "0.5.0", path = "../tinyrand-std" }
