[package]
name = "tinyrand"
version = "0.4.0"
edition = "2021"
readme = "../README.md"
authors = ["Emil Koutanov"]
license = "MIT"
description = "Lightweight RNG specification and several ultrafast implementations in Rust."
repository = "https://github.com/obsidiandynamics/tinyrand"
keywords = ["rand", "rng", "no_std"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
rand = "0.8.5"
iai = "0.1.1"
fastrand = "1.8.0"

[[bench]]
name = "cri_rand"
harness = false

[[bench]]
name = "iai_rand"
harness = false
